Fixed nav bar tabs alignment

--- a/css/edit-account-details.css
+++ b/css/edit-account-details.css
@@ -36,6 +36,7 @@
 }
 #tabs-container {
     display: flex;
+    padding-left: 85px;
 }
 
 #tabs-icon i{
